--- a/splash.yaml
+++ b/splash.yaml
@@ -3,6 +3,7 @@ flutter_native_splash:
   color_dark: "#000000"
   image: assets/logos/t-store-splash-logo-black.png
   image_dark: assets/logos/t-store-splash-logo-white.png
+  child:
 
   android_12:
     color: "#FFFFFF"
